--- a/index.html
+++ b/index.html
@@ -62,10 +62,9 @@
 					<p>MAN 2 Cianjur</p>
 					<p>Cita-cita</p>
 					<p>Orang yang bermanfaat</p>
-					<img src="Meta.jpg">
 				</section>
 				<section>Putri
-					<img class="foto" src="Putri.jpg">
+					<img class="foto" src="Putriii.jpg">
 					<p>Nama</p>
 					<p>Putri Syalwa Abdullah</p>
 					<p>Hobi</p>
@@ -74,9 +73,9 @@
 					<p>SMAN 3 Sukabumi</p>
 					<p>Cita-cita</p>
 					<p>Good leader and Good boss</p>
-					<img src=>
 				</section>
 				<section>Qinthara
+					<img class="foto" src="qin.jpg">
 					<p>Nama</p>
 					<p>Qinthara Andari Saffanah</p>
 					<p>Hobi</p>
@@ -87,15 +86,15 @@
 					<p>Jadi orang sukses dan keliling dunia</p>
 				</section>
 				<section>Shinta
+					<img class="foto" src="shintaaa.jpg">
 					<p>Nama</p>
 					<p>Shinta Nurkaafi</p>
 					<p>Hobi</p>
-					<p>Memasak</p>
+					<p>Masak-Masak</p>
 					<p>Asal Sekolah</p>
 					<p>SMA Xaverius 1 Palembang</p>
 					<p>Cita-cita</p>
 					<p>Dosen</p>
-					<img src="Shintaaa.jpg">
 				</section>
 			</div>
 		</div>
