--- a/index.html
+++ b/index.html
@@ -101,6 +101,14 @@
 					<p>Dosen</p>
 					
 				</section>
+				<section>
+					<p>5 TERMANTULLL</p>
+					<p>1. Fachri</p>
+					<p>2. Meta </p>
+					<p>3. Qinthara</p>
+					<p>4. Putri</p>
+					<p>5. Shinta</p>
+				</section>
 			</div>
 		</div>
 
