--- a/index.html
+++ b/index.html
@@ -102,6 +102,15 @@
 					<p>Dosen</p>
 					
 				</section>
+				
+				<section>
+					<p>TER-Rame</p>
+					<p>1. Aulia Rahmi</p>
+					<p>2. Fachri Muhammad Bandang Haq</p>
+					<p>3. Putri Syalwa Abdullah</p>
+					<p>4. Meta Arda Nabila</p>
+					<p>5. Qinthara Andari Saffanah</p>
+				</section>
 			</div>
 		</div>
 
