--- a/index.html
+++ b/index.html
@@ -101,6 +101,14 @@
 					<p>Dosen</p>
 					
 				</section>
+				<section>
+					<p>5 TERSEMANGAT<p>
+					<p>1. Fachri<p>
+					<p>2. Aulia<p>
+					<p>3. Putri<p>
+					<p>4. Meta<p>
+					<p>5. Shinta<p>
+				</section>
 			</div>
 		</div>
 
