--- a/index.html
+++ b/index.html
@@ -101,6 +101,14 @@
 					<p>Dosen</p>
 					
 				</section>
+				<section>
+					<p>TERSAKITI</p>
+					<p>1. Fachri</p>
+					<p>2. Qinthara</p>
+					<p>3. Shinta</p>
+					<p>4. Meta</p>
+					<p>5. Aulia</p>
+				</section>
 			</div>
 		</div>
 
