--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 					<p>3. Putri<p>
 					<p>4. Meta<p>
 					<p>5. Shinta<p>
-
+				</section>
 
 				<section>
 					<p>TERSAKITI</p>
@@ -119,7 +119,7 @@
 					<p>3. Shinta</p>
 					<p>4. Meta</p>
 					<p>5. Aulia</p>
-
+				</section>
 
 				<section>
 					<p>5 TERMANTULLL</p>
@@ -128,7 +128,7 @@
 					<p>3. Qinthara</p>
 					<p>4. Putri</p>
 					<p>5. Shinta</p>
-
+				</section>		
 				
 				<section>
 					<p>TER-Rame</p>
