--- a/index.html
+++ b/index.html
@@ -137,9 +137,15 @@
 					<p>3. Putri Syalwa Abdullah</p>
 					<p>4. Meta Arda Nabila</p>
 					<p>5. Qinthara Andari Saffanah</p>
+				</section>
 
-
-
+				<section>
+					<p>5 Tersantai</p>
+					<p>1. Meta Arda Nabila</p>
+					<p>2. Qinthara Andari Saffanah</p>
+					<p>3. Fachri Muhammad Bandang Haq</p>
+					<p>4. Putri Syalwa Abdullah</p>
+					<p>5. Aulia Rahmi</p>
 				</section>
 			</div>
 		</div>
