--- a/index.html
+++ b/index.html
@@ -147,6 +147,20 @@
 					<p>4. Putri Syalwa Abdullah</p>
 					<p>5. Aulia Rahmi</p>
 				</section>
+				<section>
+					<p>Hasil poling</p>
+					<table>
+						<tr>
+						<td valign=bottom><div style="width:30px; height:110px; background:rgb(0, 255, 13);"></td>
+						<td valign=bottom><div style="width:30px; height:220px; background:rgb(0, 255, 13);"></td>
+						<td valign=bottom><div style="width:30px; height:150px; background:rgb(0, 255, 13);"></td>
+						<td valign=bottom><div style="width:30px; height:100px; background:rgb(0, 255, 13);"></td>
+						<td valign=bottom><div style="width:30px; height:100px; background:rgb(0, 255, 13);"></td>
+						<td valign=bottom><div style="width:30px; height:100px; background:rgb(0, 255, 13);"></td>
+						</tr>
+						<tr><th>Aul</th><th>Fachri</th><th>Meta</th><th>Putri</th><th>Shinta</th><th>Qinthara</th></tr>
+						</table>
+				</section>
 			</div>
 		</div>
 
